--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,26 +1,36 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@layer components {
+     .heroButton{
+          @apply  px-3 md:px-6 py-2 border border-[#242424] rounded-full uppercase text-xs md:tracking-widest text-gray-500 
+     }
+     .contactInput{
+          @apply outline-none bg-slate-400/10 rounded-sm border-b px-4 py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all focus:border-[#F7AB0A]/40 focus:text-[#F7AB0A]/40 hover:border-[#F7AB0A]/40
+     }
+     .customSticky{
+          transition: all 250ms cubic-bezier(0.25, 0.45, 0.45, 0.94) 0s;
+          @apply bg-[#F7AB0A]
+     }
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+*{
+     scroll-behavior: smooth; 
 }
-
-* {
-  box-sizing: border-box;
+body{
+     min-height: 100vh;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.customRounded{
+     border-radius: 50% !important;
+}
+a.viewButton{
+     background-color: #000 !important;
+     color: #F7AB0A !important;
+     border-radius: 4px;
+     padding: 10px 15px;
+}
+.socialIcon{
+     border: 1px solid red;
+}
+.socialIcon:hover{
+     border: 1px solid red;
 }
